1. 플러그인을 제거하고 ttl + DLX 조합으로 변경 2. 딜레이큐를 1초 간격으로 나누어 앞의 메시지의 딜레이에 의해 뒤의 메시지의 전달이 늦어지는 일을 줄였음 3. pc의 성능 때문에 종종 자원 고갈 문제가 발생하여 consumer와 prefetch 수를 변경 4. 각 입력이 되도록이면 균등하게 들어가게 하기 위해 0~700ms 사이의 지터값을 delay에 추가로 입력